parameterized mongo db + added embedded setup

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,13 +3,13 @@ WORKDIR /app
 
 ENV JWT_KEY=this_is_a_secret_key
 ENV MONGO_PW=<password>
-ENV MONGO_URL=<ip>:27017
+ENV MONGO_URL=<ip_address>:27017
 
 COPY package.json /app
 RUN npm install
 
 COPY . /app
 
-CMD node server.js
+CMD node server.js --env=prd
 
 EXPOSE 3000
