--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.0.1",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config proxy.conf.json",
+    "start:frontend": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
-    "start:server": "nodemon ./backend/server.js"
+    "start:backend:prd": "node ./backend/server.js --env=prd",
+    "start:backend:dev": "nodemon ./backend/server.js --env=dev",
+    "start:backend:embedded": "nodemon ./backend/server.js --env=embedded"
   },
   "private": true,
   "dependencies": {
@@ -30,6 +32,7 @@
     "mongoose-unique-validator": "^2.0.2",
     "multer": "^1.4.1",
     "rxjs": "^6.0.0",
+    "yargs": "^13.2.4",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
